Completed user controller wrappers
