# server/src/endpoint_controllers/org_controller.py
@@ -1,14 +1,14 @@
 import connexion
 import six
 
+from swagger_server.models.inline_response2001 import InlineResponse2001  # noqa: E501
 from swagger_server.models.inline_response2002 import InlineResponse2002  # noqa: E501
-from swagger_server.models.inline_response2003 import InlineResponse2003  # noqa: E501
-from swagger_server.models.inline_response2004 import InlineResponse2004  # noqa: E501
+from swagger_server.models.user_org import UserOrg  # noqa: E501
 from swagger_server.models.verifier_password import VerifierPassword  # noqa: E501
 from swagger_server import util
 
 
-def create_org(body=None):  # noqa: E501
+def create_org(body):  # noqa: E501
     """Create org
 
      # noqa: E501
@@ -16,7 +16,7 @@ def create_org(body=None):  # noqa: E501
     :param body: Org id is optional
     :type body: dict | bytes
 
-    :rtype: InlineResponse2004
+    :rtype: InlineResponse2002
     """
     if connexion.request.is_json:
         body = object.from_dict(connexion.request.get_json())  # noqa: E501
@@ -42,7 +42,7 @@ def get_org(org_id):  # noqa: E501
     :param org_id: The id of the org
     :type org_id: int
 
-    :rtype: InlineResponse2003
+    :rtype: UserOrg
     """
     return 'do some magic!'
 
@@ -53,12 +53,12 @@ def get_org_list():  # noqa: E501
      # noqa: E501
 
 
-    :rtype: InlineResponse2002
+    :rtype: InlineResponse2001
     """
     return 'do some magic!'
 
 
-def get_verifier_password(body=None):  # noqa: E501
+def get_verifier_password(body):  # noqa: E501
     """Get password used by ID verifiers to login into voting machine
 
      # noqa: E501
@@ -73,7 +73,7 @@ def get_verifier_password(body=None):  # noqa: E501
     return 'do some magic!'
 
 
-def update_org(body=None):  # noqa: E501
+def update_org(body):  # noqa: E501
     """Update org info
 
      # noqa: E501
