# server/src/endpoint_controllers/org_election_download_controller.py
@@ -1,7 +1,7 @@
 import connexion
 import six
 
-from swagger_server.models.inline_response20010 import InlineResponse20010  # noqa: E501
+from swagger_server.models.inline_response2007 import InlineResponse2007  # noqa: E501
 from swagger_server import util
 
 
@@ -13,6 +13,6 @@ def download_voting_package(election_id):  # noqa: E501
     :param election_id: The id of the election
     :type election_id: int
 
-    :rtype: InlineResponse20010
+    :rtype: InlineResponse2007
     """
     return 'do some magic!'
