# server/src/endpoint_controllers/org_elections_controller.py
@@ -2,13 +2,12 @@ import connexion
 import six
 
 from swagger_server.models.election import Election  # noqa: E501
-from swagger_server.models.inline_response2006 import InlineResponse2006  # noqa: E501
-from swagger_server.models.inline_response2007 import InlineResponse2007  # noqa: E501
-from swagger_server.models.inline_response2008 import InlineResponse2008  # noqa: E501
+from swagger_server.models.inline_response2004 import InlineResponse2004  # noqa: E501
+from swagger_server.models.inline_response2005 import InlineResponse2005  # noqa: E501
 from swagger_server import util
 
 
-def create_election(body=None):  # noqa: E501
+def create_election(body):  # noqa: E501
     """Create election
 
     Create election # noqa: E501
@@ -16,7 +15,7 @@ def create_election(body=None):  # noqa: E501
     :param body: Election ID is not required to POST
     :type body: dict | bytes
 
-    :rtype: InlineResponse2008
+    :rtype: InlineResponse2005
     """
     if connexion.request.is_json:
         body = Election.from_dict(connexion.request.get_json())  # noqa: E501
@@ -44,7 +43,7 @@ def get_election(election_id):  # noqa: E501
     :param election_id: The id of the election
     :type election_id: int
 
-    :rtype: InlineResponse2007
+    :rtype: Election
     """
     return 'do some magic!'
 
@@ -57,12 +56,12 @@ def get_election_list(org_id):  # noqa: E501
     :param org_id: The id of the org
     :type org_id: int
 
-    :rtype: InlineResponse2006
+    :rtype: InlineResponse2004
     """
     return 'do some magic!'
 
 
-def update_election(body=None):  # noqa: E501
+def update_election(body):  # noqa: E501
     """update election
 
     Update election. Elections can only be updated before they have commenced.  # noqa: E501
