# server/src/endpoint_controllers/user_auth_controller.py
@@ -1,11 +1,13 @@
 import connexion
 import six
 
-from swagger_server.models.inline_response200 import InlineResponse200  # noqa: E501
-from swagger_server import util
+from server.swagger_server.models.inline_response200 import InlineResponse200  # noqa: E501
+from server.swagger_server import util
+import server.src.db.mysql_interface as db
+from server.src.constants_enums.obj_keys import LoginKeys
 
 
-def login(body=None):  # noqa: E501
+def login(body):  # noqa: E501
     """Login user
 
      # noqa: E501
@@ -15,10 +17,8 @@ def login(body=None):  # noqa: E501
 
     :rtype: InlineResponse200
     """
-    if connexion.request.is_json:
-        body = connexion.request.get_json()  # noqa: E501
 
-    uid = get_uid_with_credentials(body['email'], body['password'])
-    return generate_token(uid) if uid else 'Not Authorized', 401
+    body = connexion.request.get_json()  # noqa: E501
+    uid = db.get_uid_with_credentials(body[LoginKeys.EMAIL], body[LoginKeys.PASSWORD])
 
-
+    return 'do some magic!'
