# server/swagger_server/controllers/user_auth_controller.py
@@ -16,9 +16,5 @@ def login(body):  # noqa: E501
     :rtype: InlineResponse200
     """
     if connexion.request.is_json:
-        body = connexion.request.get_json()  # noqa: E501
-
-    uid = get_uid_with_credentials(body['email'], body['password'])
-    return generate_token(uid) if uid else 'Not Authorized', 401
-
-
+        body = object.from_dict(connexion.request.get_json())  # noqa: E501
+    return 'do some magic!'
