# server/swagger_server/models/__init__.py
@@ -8,15 +8,12 @@ from swagger_server.models.election import Election
 from swagger_server.models.election_results import ElectionResults
 from swagger_server.models.inline_response200 import InlineResponse200
 from swagger_server.models.inline_response2001 import InlineResponse2001
-from swagger_server.models.inline_response20010 import InlineResponse20010
 from swagger_server.models.inline_response2002 import InlineResponse2002
 from swagger_server.models.inline_response2003 import InlineResponse2003
 from swagger_server.models.inline_response2004 import InlineResponse2004
 from swagger_server.models.inline_response2005 import InlineResponse2005
 from swagger_server.models.inline_response2006 import InlineResponse2006
 from swagger_server.models.inline_response2007 import InlineResponse2007
-from swagger_server.models.inline_response2008 import InlineResponse2008
-from swagger_server.models.inline_response2009 import InlineResponse2009
 from swagger_server.models.inline_response404 import InlineResponse404
 from swagger_server.models.option import Option
 from swagger_server.models.option_results import OptionResults
